# goitneo-python-hw-3-group-1

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
source/: functions.py
